<resources>
    <string name="app_name">Credit calculator</string>
    <string name="hello">Hello!</string>
    <string name="description">This application allows you to calculate the cost of credit.</string>
    <string name="button">Press to start</string>
    <string name="university">Cracow University of Economics</string>
    <string name="field">Field of study: Applied Informatics</string>
    <string name="part_of">The project was made as a part of Programming Mobile Systems classes</string>
    <string name="authors">Authors: Jakub Krekora and Serhiy Karaptan</string>
    <string name="group">Group: KrDZIs3012Io</string>
    <string name="year">Year: 2016</string>

    <string name="command1">Enter data:</string>
    <string name="amount">Credit amount</string>
    <string name="commission">Commission</string>
    <string-array name="spinner">
        <item>do not include</item>
        <item>increases the amount</item>
        <item>reduces the amount</item>
        <item>paid separately</item>
    </string-array>
    <string name="commission_size">Commission size</string>
    <string name="interest_rate">Interest rate</string>
    <string name="loan_period">Loan period</string>
    <string name="installment_type">Installment type</string>
    <string-array name="spinner1">
        <item>equal</item>
        <item>decreasing</item>
    </string-array>
    <string name="button1">Calculate</string>
    <string name="button3">Reset</string>
    <string name="button7">Load from file</string>
    <string name="value">value</string>
    <string name="months">months</string>

    <string name="com_size">Commission size:</string>
    <string name="cr_amount">Credit amount:</string>
    <string name="am_paid">Amount to be paid:</string>
    <string name="in_rate">Interest rate:</string>
    <string name="lo_period">Loan period:</string>
    <string name="pay_sum">Payments sum:</string>
    <string name="no">No</string>
    <string name="interest">Interest</string>
    <string name="fund">Fund</string>
    <string name="installment">Installment</string>
    <string name="button2">Save to file</string>
    <string name="button4">Information</string>

    <string name="information">Additional credit costs may be:</string>
    <string name="information1">> margin of the bank or lending company</string>
    <string name="information2">> the cost of servicing the loan</string>
    <string name="information3">> the commission for the bank</string>
    <string name="information4">> the costs associated with credit insurance"</string>
    <string name="thanks">THANK YOU FOR USING THIS APP!</string>
    <string name="button6">How to calculate</string>
    <string name="button5">Cracow University of Economic</string>

    <string name="button8">Save changes</string>

</resources>
