<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jakub.creditcalculator.Information"
    android:background="@drawable/money2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView36"
        android:text="@string/information"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView38"
        android:text="@string/information1"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/textView36" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView39"
        android:text="@string/information2"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/textView38" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView40"
        android:text="@string/information3"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/textView39" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView41"
        android:text="@string/information4"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/textView40" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="howToCalculate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToUek"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:id="@+id/textView37"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center" />

</RelativeLayout>
